--- a/bindu.bib
+++ b/bindu.bib
@@ -216,7 +216,7 @@ address={Delhi},
   year={1920},
   publisher={Venkatesvara Steam Press},
   address={Bombay},
-  keywords={seclit},
+  keywords={printsource},
 }
 
 @book{siddharoma,
@@ -364,6 +364,16 @@ keywords={printsource},
   publisher={Istituto italiano per l’Africa e l’Oriente},
   address={Rome},
   keywords={printsource},
+}
+
+@book{yogataravali, 
+title={Yogatārāvalī}, 
+subtitle={Śrīmacchaṅkarābhagavatpādaviracitā Yogatārāvalī}, 
+year={1987}, 
+editor={Śāstrī, Svāmī Śrīdayānanda},
+publisher={Vārāṇaseya Saṃskṛta Saṃsthāna},
+address={Varanasi},
+keywords={printsource}, 
 }
 
 @book{isaac2014,
@@ -699,6 +709,29 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
    keywords={seclit},
 }
 
+@book{vasishtasamhita, 
+title={Vasiṣṭhasaṃhitā Yogakāṇḍa}, 
+subtitle={revised edition}, 
+year={2005},
+note={first edition, 1984}, 
+editor={Digambarji, Swami and Jha, Pitambar and Sahay, Gyan Shankar and Maheshananda Swami and Sharma, B.R. and Sahay Shri G.S., and Bodhe, Shri R.K.Bodhe}, 
+publisher={Kaivalyadhama S.M.Y.M. Samiti}, 
+address={Lonavla}, 
+keywords={printsource}, 
+} 
+
+@book{spandakarika, 
+title={Spandakārikā}, 
+subtitle={With the commentary by Ksemaraja},
+author={Vasugupta}, 
+editor={Shastri, M.K.}, 
+year={1925}, 
+publisher={Kashmir Pratap Steam Press}, 
+address={Srinagar},
+keywords={printsource},
+}
+
+
 @book{viveka1983,
    title={Vivekamārtaṇḍa},
    editor= {Śrīvāstava, Rāmalāla},
@@ -767,6 +800,20 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
    publisher={Deccan College Post-graduate and Research Institute},
    keywords={seclit},
 }
+
+@article{maas2009stemma, 
+ title={Computer Aided Stemmatics — The Case of Fifty-Two Text Versions of Carakasaṃhitā Vimānasthāna 8.67-157}, 
+ author={Maas, Philipp André}, 
+ year={2009}, 
+ journal={Vienna Journal of South Asian Studies 2009-2010}, 
+ volume={52/53 Text Genealogy, Textual Criticism and Editorial Technique (2009-2010)},
+ pages={63-119}, 
+ publisher={Austrian Academy of Sciences Press},
+ address={Vienna}, 
+ keywords={seclit}, 
+}
+
+
 
 @book{mallinson2012hatha,
    title={Yoga: Haṭha Yoga},
@@ -1039,6 +1086,48 @@ address={Delhi},
 keywords={printsource},
 } 
 
+@book{puranicencyclopedia, 
+title={Puranic encyclopaedia},
+subtitle={A comprehensive dictionary with special reference to the epic and Puranic literature}, 
+author={Mani, Vettam},
+year={1975},
+publisher={Motilal Banarsidass},
+address={Delhi},
+keywords={seclit},
+}
+ 
+@book{vishnupurana,
+title={Viṣṇupurāṇa},
+subtitle={The Vishnu Purana},
+editor={Wilson, Horace H.},
+year={1981},
+publisher={Garland Pub.},
+address={New York},
+keywords={printsource},
+} 
+
+@book{bodhasara,
+title={Bodhasāra}, 
+subtitle={A Treatise on Vedânta, With a Commentary by the Author's Pupil, Paṇḍit Divâkar}, 
+editor={Dayânand, Swâmî}, 
+year={1905},
+series={Benares Sanskrit series},
+volume={23}, 
+publisher={Chowkhamba Sanskrit Book Depot}, 
+address={Benares},
+keywords={printsource}, 
+} 
+
+
+@book{bodhasarax, 
+title={Bodhasāra}, 
+subtitle={The Surprise of Awareness, the Sanskrit and English Version. An 18th Century Sanskrit Treasure. Translated by Jennifer and Grahame Cover.}, 
+author={Cover, Jennifer and Cover, Grahame}, 
+year={2014}, 
+publisher={CreateSpace}, 
+address={North Charleston, S.C.}, 
+keywords={printsource}, 
+}
 
 @book{asiddhi,
   title={Amṛtasiddhi}, 
@@ -1391,6 +1480,15 @@ keywords={seclit},
   keywords={seclit},
 }
 
+@book{petersburger3,
+  title={Sanskrit Wörterbuch},
+  author={Boethling, O. und Roth, R.},
+  year={1858},  
+  volume={3},
+  address={Petersburg},
+  keywords={seclit},
+}
+
 @book{petersburger4,
   title={Sanskrit Wörterbuch},
   author={Boethling, O. und Roth, R.},
@@ -1437,6 +1535,20 @@ keywords={seclit},
   address={Prayāg},
   keywords={printsource},
 }
+
+@article{pudi2023, 
+  title={Avadhūta: Examining the Emergence and Institutionalisation of an Antinomian Ascetic}, 
+  author={Kanamarlapudi, Sravani},
+  year={2023}, 
+  journal={Journal of Hindu Studies},
+  volume={XX}, 
+  pages={XX-XX}, 
+  publisher={Oxford University Press},
+  note={When accessing this article, the Journal's volume had not yet been completed. Hence the volume number and the pages are not fixed.},  
+  address={Oxford},
+  keywords={seclit}, 
+}  
+
 
 @book{hathatattvakaumudi,
   title={Haṭhatattvakaumudī},
@@ -1619,6 +1731,16 @@ url={http://ngmcp.fdm.uni-hamburg.de/mediawiki/index.php/B_24-5_Gorakṣaśatak
    address={Cambridge University Library},
    keywords={codex},
 }
+
+@book{amaraed,
+   title={Amarakośa}, 
+   subtitle={Amarakosha with commentary by Maheshwara, enlarged by Raghunath Shastri Talekar},
+   year={1896}, 
+   publisher={Department of Public Instruction},
+   address={Bombay}, 
+   keywords={printsource}, 
+} 
+
 
 @codex{hathacandrika,
    title={Haṭhasaṅketacandrikā},
@@ -1952,6 +2074,15 @@ address={Delhi},
   howpublished = {\url{https://www.aai.uni-hamburg.de/en/forschung/ngmcp}},
   note = {\url{https://www.aai.uni-hamburg.de/en/forschung/ngmcp}; Zugriff: 07.07.2022}, 
   keywords={onlinesource},
+}
+
+@online{bhedabheda, 
+  title={Bhedābheda Vedānta},
+  author={Nicholson, Andrew J.}, 
+  publisher={ Internet Encyclopedia of Philosophy (IEP) (ISSN 2161-0002)}
+  howpublished = {\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}}, 
+  note = {\url{https://web.archive.org/web/20231006075017/https://iep.utm.edu/bhedabheda-vedanta/}; Saved on archive.org: 06.10.2023},  
+  keywords={onlinesource}, 
 }
 
 @online{ngmpp,
