--- a/bindu.tex
+++ b/bindu.tex
@@ -160,251 +160,255 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 \chapter{Critical Edition \& Annotated Translation}
 \cleardoublepage
 \begin{alignment}[
-  texts=edition[class="edition"];
-  translation[class="translation"],
+    texts=edition[class="edition"];
+    translation[class="translation"],
   ]
-  \begin{edition}
-    \ekddiv{type=ed}
-    \ekddiv{
-      head={[\uproman{39}. \textbf{piṇḍamadhye 'ṣṭakulaparvatāḥ}]},
-      type=section,
-      depth=2, 
-      n=XXXIX
-    }
-    \begin{prose}
-      \noindent
-%----------------------------
-%idānīm             aṣṭamakulaparvatāḥ kathyante/  \E
-%idānīm             aṣṭakulaparvatāḥ   kathyaṃte   \P
-%idānīm             aṣṭamakulaparvatāḥ kathyaṃte// \B
-%idānīm             aṣṭamakulaparvatāḥ kathyaṃte// \L
-%\om                                               \N1
-%idānīṃ piṃḍamadhye aṣṭakulaparvatāḥ   kathyaṃte// \D
-%\om                                               \N2
-%idānīṃ piṃḍamadhye aṣṭakulaparvatāḥ   kathyaṃte   \U1
-%idānīm             aṣṭakulaparvatā    kathyaṃte// \U2
-%-----------------------------
-%Now, the eight mountains within the body are taught. 
-%----------------------------
-\note[type=source, labelb=281, labele=_281e, nosep]{cf. YSv (PT p. 843): idānīṃ parvatāś cāṣṭau kathyante śṛṇu yatnataḥ | merudaṇḍe sumerus tu pīṭhamadhye himālayaḥ | vāmaskandhe tathā dakṣe malayo mandarācalaḥ | vindhyas tu dakṣiṇe karṇe vāme maināka īśvari | lalāṭe madhyadeśe tu śrīśailaḥ parameśvari | tathā brahmakapāṭasthaḥ kailāsaḥ parvato mahān | sumerur himavān vindhyo malayo mandaras tathā | śrīśailo mainākaś ceti kailāso 'ṣṭau ca parvatāḥ | apare parvatāḥ sarveaṅgulīmadhyavāsinaḥ |}
-\note[type=source, labelb=282, labele=_281e, nosep]{cf. SSP 3.10 (Ed. p. 56): meruparvato merudaṇḍe vasati | kailāso brahmakapāṭe vasati | himālayaḥ pṛṣṭhe | malayo vāmakandhare | mandaro dakṣiṇakandhare | vindhyo dakṣiṇakarṇe | maināko vāmakarṇe | śrīparvato lalāṭe | evam aṣṭa kulaparvatāḥ | anye upaparvatāḥ sarvāṅguliṣu vasanti |}
-  \app{\lem[wit={D,U1}]{idānīṃ}
-  \rdg[wit={ceteri}]{idānīm}}
-\app{\lem[wit={D,U1}]{piṇḍamadhye}
-  \rdg[wit={ceteri}]{\om}}
-\app{\lem[type=emendation, resp=egoscr]{'ṣṭakulaparvatāḥ}
-  \rdg[wit={P,D,U1}]{aṣṭakulaparvatāḥ}
-  \rdg[wit={U2}]{aṣṭakulaparvatā}
-  \rdg[wit={B,E,L}]{aṣṭamakulaparvatāḥ}}
-kathyante/
-%----------------------------  
-%merudaṇḍamadhye merumaṃdaraḥ/   brahmakapāṭamadhye  kailāsaḥ/ \E
-%merudaṇḍamadhye merumaṃdaraḥ    brahmakapāṭamadhye  kailāsaḥ  \P
-%merudaṇḍamadhye merumaṃdaraḥ/   brahmakapāṭamadhye  kailāsaḥ/ \B
-%merudaṇḍamadhye merumaṃdaraḥ/   brahmakapāṭamadhye  kailāsaḥ/ \L
-%\om                                                                  \N1
-%merudaṃḍamadhye merumparvataḥ// brahmakapāṭamadhye  kailāsaparvataḥ \D
-%\om                                                                 \N2
-%merudaṇḍamadhye merumparvattaḥ  brahmakapāṭamadhye  kailāsaparvataḥ \U1
-%merudaṇḍamadhye merumaṃdaraḥ//  brahmakapāṭamadhye  kailāsaḥ// \U2 %%%419.jpg 
-%-----------------------------
-%(1) Within the spine is mount Meru. (2) Within the door of Bahman is mount Kailasa. 
-%----------------------------
-merudaṃḍamadhye
-\app{\lem[type=emendation, resp=egoscr]{meruparvataḥ}
-  \rdg[wit={D,U1}]{merumparvataḥ}
-  \rdg[wit={ceteri}]{merumaṃdaraḥ}}\dd{}
-brahmakapāṭamadhye
-\app{\lem[wit={D,U1}]{kailāsaparvataḥ}
-  \rdg[wit={ceteri}]{kailāsaḥ}}\dd{}
-%----------------------------
-%pṛṣṭhamadhye   himācalaḥ/           vāmaskandhe malayācalaḥ/  dakṣiṇaskandhe mandarācalaḥ/  dakṣiṇakarṇe vindhyācalaḥ/  \E
-%pṛṣṭhaṃ madhye himācalaḥ            vāmaskaṃdhe malayācalaḥ   dakṣiṇaskaṃdhe maṃdarācalaḥ   dakṣiṇakarṇe vindhyācalaḥ    \P
-%pṛthvīmadhye  himācalaḥ/            vāmaskaṃdhe malayācalaḥ/  dakṣiṇaskaṃdhe maṃdarācalaḥ/  dakṣiṇakarṇe vindhyācalaḥ/ \B
-%pṛthvīmadhye   himācalaḥ/           vāmaskaṃdhe malayācalaḥ/  dakṣiṇaskaṃdhe maṃdarācalaḥ/  dakṣiṇakarṇe viṃdhyācalaḥ/  \L
-%\om                                                                 \N1
-%paiṭimadhye    himācalaḥ// parvataḥ vāmaskaṃdhe malayācalaḥ   dakṣaṇaskaṃdhe maṃdarācalaḥ   dakṣaṇakarṇe viṃdhyācalaḥ  \D
-%\om                                                                 \N2
-%paiṭhamadhye   himācala----parvataḥ vāmaskaṃdhe malayācalaḥ   dakṣaṇaskaṃdhe maṃdarācalaḥ   dakṣaṇakarṇe viṃdhyācalaḥ  \U1
-%pṛṣṭhamadhye   himācalaḥ//          vāmaskandhe malayācalaḥ// dakṣiṇaskandhe mandarācalaḥ// dakṣiṇakarṇe vindhyācalaḥ//  \U2
-%-----------------------------
-% (3) Within the back is the Himālaya. (4) Within the left shoulder mount Malabar. (5) Within the right shoulder the mountain of Mandara. (6) In the right ear the Vindhya mountain. 
-%----------------------------
-\app{\lem[wit={E,U2}, alt={pṛṣṭhamadhye}]{pṛṣṭha:\\madhye}
-  \rdg[wit={P}]{pṛṣṭhaṃ madhye}
-  \rdg[wit={B,L}]{pṛthvīamadhye}
-  \rdg[wit={D}]{paiṭimadhye}
-  \rdg[wit={U1}]{paiṭhamadhye}}
-\app{\lem[wit={ceteri}]{himācalaḥ}
-  \rdg[wit={D}]{himācalaḥ || parvataḥ}
-  \rdg[wit={U1}]{himācalaparvataḥ}}\dd{}
-vāmaskaṃdhe malayācalaḥ\dd{}
-dakṣiṇaskaṃdhe maṃdarācalaḥ\dd{}
-dakṣaṇakarṇe viṃdhyācalaḥ\dd{}
-%----------------------------
-%vāmakarṇe mainākaḥ/  lalāṭamadhye śrīśailaḥ/   apare śailāḥ   hastayoḥ  pādayor aṃgulīnāṃ   mūleṣu varttaṃte// \E
-%vāmakarṇe mainākaḥ   lalāṭamadhye śrīśailaḥ    apare śailā    hastayoḥ  pādayor aṃgulīnāṃ   mūleṣu varttaṃte   \P
-%vāmakarṇe mainākaḥ/  lalāṭamadhye śrīśailāsaḥ/ apare śailā    hastayoḥ/ pādayor aṃguli------mūleṣu vartate//   \B
-%vāmakarṇe mainākaḥ/  lalāṭamadhye śrīśailaḥ/   apare śailā    hastayoḥ/ pādayor aṃgulī------mūleṣu vartate/    \L
-%\om                                                                 \N1
-%vāmakarṇe mainākaḥ// lalāṭamadhye śrīśailaḥ//  apare parvatāḥ hastayoḥ  pādayor aṃgulīnāṃ   madhye vartatte//  \D
-%\om                                                                 \N2 
-%vāmakarṇe mainākaḥ   lalāṭamadhye śrīśailaḥ    apare parvatāḥ hastayoḥ  pādayor aṃgulībhyāṃ madhye parvate     \U1
-%vāmakarṇe mainākaḥ   lalāṭamadhye śrīśailaḥ//  apare śailāḥ// hastayoḥ  pādayor aṃgulīnāṃ   mūleṣu vartaṃte//  \U2
-%-----------------------------
-% (7) In the left ear the Maināka[-mountain]. (8) Within the forehead Śrīśaila. Other mountains exist in the hands, feet, and toes. 
-%----------------------------
-vāmakarṇe mainākaḥ\dd{}
-lalāṭamadhye
-\app{\lem[wit={ceteri}]{śrīśailaḥ}
-  \rdg[wit={B}]{śrīśailāsaḥ}}/ 
-apare \app{\lem[wit={D,U1}]{parvatāḥ}
-  \rdg[wit={E,U2}]{śailāḥ}
-  \rdg[wit={B,P,L}]{śailā}}
-pādayo\skp{r-aṃ}\app{\lem[wit={E,P,D},alt={aṃgulīnāṃ}]{\skp{r-aṃ}gulīnāṃ}
-  \rdg[wit={U1}]{aṃgulībhyāṃ}
-  \rdg[wit={B,L}]{aṃguli°}}
-\app{\lem[wit={ceteri}]{mūleṣu}
-  \rdg[wit={D,U1}]{madhye}}
-\app{\lem[wit={ceteri}]{vartante}
-  \rdg[wit={B,L}]{vartate}
-  \rdg[wit={U1}]{parvate}}/\linelabel{_281e}
+\begin{edition}
+  \ekddiv{type=ed}
+ \ekddiv{
+ head={[\uproman{1}. \textbf{rājayogaprakāra}]},
+type=section,
+ depth=2,
+ n=I
+}
+\label{intro}
+\begin{prose}
+\noindent  
+%--------------------------
+% śrī gaṇeśāya namaḥ /                                                     rājayogāntargataḥ //  binduyogaḥ   \E 
+% śrī gaṇeśāya namaḥ /                                                     atha tattvabiṃduyogaprāraṃbhaḥ     \L
+% śrī ṇe ya maḥ /                                                          atha rājayoga         liṣyate      \P
+% \om                                                                                                         \B      
+% śrī gaṇeśāya namaḥ // śrī gurave namaḥ //                                atha rājayogaprakāro  likhyate //  \N1
+% śrī gaṇeśāya namaḥ //                                                //  atha rājayogaprakāro  likhyate //  \N2
+% śrī gaṇeśāya namaḥ // śrī sarasvatyai namaḥ // śrī nirañjanāya namaḥ //  atha rājayogaprakāro  likhyate //  \D
+% śrī gaṇeśāya namaḥ /  oṃ śrī niraṃjanāya //                              atha rājayogaprakāra  likhyate //  \U1
+% śrī gaṇeśāya namaḥ /                                                     atha rājayoga         likhyate //  \U2
+%--------------------------
+%Homage to Śrī Gaṇeśa. Now, the way of Rājayoga is laid down.
+%--------------------------          
+\note[type=source, labelb=_11b,labele=_11e, nosep]{cf. YSv (PT p. 831): atha rājayogaḥ || yogasvarodaye | īśvara uvāca | rājayogaṃ pravakṣyāmi śṛṇu sarvatra siddhidam | guhyādguhyataraṃ devi nānādharmaṃ parāt param rājayogena deveśi nṛpapūjyo bhaven naraḥ | rājayogī cirāyuś ca aṣṭaiśvaryamayo bhavet ||}
+\app{\lem[wit={ceteri}]{śrī gaṇeśāya namaḥ}
+        \rdg[wit={P}]{śrī ṇe ya maḥ}
+        \rdg[wit={N1}]{śrī gaṇeśāya namaḥ || śrī gurave namaḥ ||}
+        \rdg[wit={D}]{śrī gaṇeśāya namaḥ || śrī sarasvatyai namaḥ || śrī nirañjanāya namaḥ ||}
+        \rdg[wit={U1}]{śrī gaṇeśāya namaḥ || oṃ śrī niraṃjanāya ||}}\dd{}
+\app{\lem[wit={N1,N2,D}]{atha rājayogaprakāro likhyate}
+        \rdg[wit={U1}]{atha rājayogaprakāra likhyate}
+        \rdg[wit={E}]{rājayogāntargataḥ || binduyogaḥ}
+        \rdg[wit={L}]{atha tattvabiṃduyogaprāraṃbhaḥ}
+        \rdg[wit={P}]{atha rājayoga liṣyate}
+        \rdg[wit={U2}]{atha rājayoga likhyate}}/ 
+%-------------------------- 
+% \om                        \E
+% \om                        \L
+% \om                        \B
+% rājayogasyedaṃ phalaṃ      \P
+% rājayogasya idaṃ phalaṃ    \N1
+% rājayogasya idaṃ phalaṃ    \N2
+% rājayogasya idaṃ phalaṃ // \D
+% rājayogasya idaṃ phalaṃ    \U1
+% rājayogasyedaṃ phalaṃ /    \U2
+%--------------------------    
+\app{\lem[wit={P,U2}]{rājayogasyedaṃ phalaṃ}
+  \rdg[wit={N1,N2,D}]{rājayogasya idaṃ phalaṃ}
+  \rdg[wit={E,L}]{\om}}/
+%--------------------------
+%This is the result of \textit{rājayoga}:
+%--------------------------
+% \om                                                                                                                                                                         \E
+% \om                                                                                                                                                                         \L
+% \om                                                                                                                                                                         \B
+% yena rājayogenāneka---rājyabhogasamaya   eva   anekapārthivavinodaprekṣaṇasamaya  eva   bahutarakālaṃ  śarīrasthitir  bhavati    sa eva  rājayogaḥ tasyaite     bhedāḥ      \P
+% yena rājayogenāneka---rājyabhogasamaya   eva/  anekapārthivavinodaprekṣaṇasamaya  eva/  bahutarakālaṃ  śarīrasthitir  bhavati    sa eva  rājayogaḥ /  tasya ete bhedāḥ /    \N1
+% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣaṇasamaya  eva   bahuttarakālaṃ śarīrasthitir  bhavati    sa eva  rājayogaḥ /  tasya ete bhedāḥ /    \N2
+% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣaṇasamaya  eva// bahutarakālaṃ  śarīrasthitir  bhavati//  sa eva  rājayogaḥ // tasya ete bhedāḥ /    \D
+% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣaṇasamaya  eva// bahutarakālaṃ  śarīrasthitir  bhavati    sa evaṃ rājayogaḥ    tasya ete bhedāḥ //   \U1 
+% yena rājayogena  anekarājyabhogasamaya   eva// anekapārthivavinodaprekṣyaṇasamaya eva// bahutarakālaṃ  śarīrasthitir  bhavati//  sa eva  rājayogastaisyaite     bhedāḥ //   \U2
+% --------------------------
+%\textit{Rājayoga} is that by which longterm durability of the body arises even amongst manifold royal pleasures even amongst the manifold royal entertainments and spectacle. This truly is \textit{rājayoga}. Of this [\textit{rājayoga}] these are the varieties: \end{tlate}
+%--------------------------
+yena rāja\app{\lem[wit={P,N1}, alt={°yogenāneka°}]{yogenāneka}
+  \rdg[wit={D,N2,U1,U2}]{°yogena aneka°}
+}rājyabhogasamaya eva/ anekapārthivavinoda
+      \app{\lem[wit={ceteri}]{prekṣaṇasamaya}
+        \rdg[wit={U2}]{prekṣyaṇasamaya}}
+      eva/ bahutarakālaṃ śarīrasthitir-bhavati/
+      sa \app{\lem[wit={ceteri}]{eva}
+        \rdg[wit={U2}]{evaṃ}}
+      \app{\lem[wit={ceteri}]{rājayogaḥ}
+        \rdg[wit={U2}]{rājayogas}}/\linelabel{_11e} 
+      \app{\lem[wit={P,U2}]{tasyaite}
+        \rdg[wit={ceteri}]{tasya ete}} bhedāḥ/
+        \note[type=source, labelb=1b, labele=_1e, nosep]{cf. YSv (PT p. 831): pañcadaśaprakāro 'yaṃ rājayogaḥ || kriyāyogo jñānayogaḥ karmayogo haṭhas tathā | dhyānayogo mantrayoga urayogaś ca vāsanā |  rājaty etad brahmavaśīva ebhiś ca pañcadaśadhā | idānīṃ lakṣaṇañ caiṣāṃ kathayāmi śṛṇu priye |}
+        \note[type=testium, labelb=1b, labele=_1e, nosep]{ cf. \textit{Yogasiddhāntacandrikā} (Ed. p. 2): nididhyāsanañ caika tānatādirūpo rājayogāparaparyāyaḥ samādhiḥ | tatsādhanaṃ tu kriyāyogaḥ, caryāyogaḥ, karmayogo, haṭhayogo, mantrayogo, jñānayogaḥ, advaitayogo, lakṣyayogo, brahmayogaḥ, śivayogaḥ, siddhiyogo, vāsanāyogo, layayogo, dhyānayogaḥ, premabhaktiyogaś ca |}
+%-------------------------
+%
+% \om                                                                                                                                                                \E
+% \om                                                                                                                                                                \L
+% \om                                                                                                                                                                \B
+% kriyāyogaḥ 1 jñānayogaḥ 2 caryāyogaḥ 3 haṭhayogaḥ 4 karmayogaḥ 5 layayogaḥ 6 dhyānayogaḥ 7 maṃtrayogaḥ 8 lakṣyayogaḥ 9 vāsanāyogaḥ 10 śivayogaḥ 11 brahmayogaḥ 12 advaitayogaḥ 13 siddhayogaḥ 14 rājayogaḥ 15 ete paṃcadaśayogāḥ \P
+%
+% kriyāyogaḥ / jñānayogaḥ / caryāyogaḥ / haṭhayogaḥ / karmayogaḥ / layayogaḥ / dhyānayogaḥ / maṃtrayogaḥ / lakṣyayogaḥ / vāsanāyogaḥ / śivayogaḥ / brahmayogaḥ / advaitayogaḥ / rājayogaḥ / siddhayogaḥ / ete paṃcadaśayogāḥ // \N1
+%
+% kriyāyogaḥ jñānayogaḥ caryāyogaḥ haṭhayogaḥ karmayogaḥ layayogaḥ dhyānayogaḥ maṃtrayogaḥ lakṣayogaḥ vāsanāyogaḥ śivayogaḥ brahmayogaḥ advaitayogaḥ rājayogaḥ siddhayogaḥ // ete paṃcadaśayogāḥ // \N2      
+%      
+% kriyāyogaḥ // jñānayogaḥ // caryāyogaḥ // haṭhayogaḥ // karmayogaḥ // layayogaḥ // dhyānayogaḥ // maṃtrayogaḥ // lakṣyayogaḥ // vāsanāyogaḥ // śivayogaḥ // brahmayogaḥ // advaitayogaḥ // rājayogaḥ // siddhayogaḥ // ete paṃcadaśayogāḥ // \D
+% \om                                                                                                                                                                         \D2      
+%
+% kriyāyogaḥ // jñānayogaḥ // tvaryāyogaḥ // haṭhayogaḥ // karmayogaḥ // layayogaḥ // dhyānayogaḥ maṃtrayogaḥ  lakṣayogaḥ  vāsanāyogaḥ  śivayogaḥ  brahmayogaḥ  advaitayogaḥ  rājayogaḥ  siddhayogaḥ ete paṃcadaśayogāḥ  \U1
+%
+% kriyāyogaḥ // jñānayogaḥ // caryāyogaḥ // haṭhayogaḥ // karmayogaḥ // nayayogaḥ // dhyānayogaḥ // maṃtrayogaḥ // lakṣyayogaḥ // vāsanāyogaḥ // śivayogaḥ // brahmayogaḥ // advaitayogaḥ // siddhayogaḥ // rājayogaḥ // evaṃ paṃcadaśāyogā bhavaṃti // \U2
+%-------------------------
+         kriyāyogaḥ 1\dd{}
+         jñānayogaḥ 2\dd{}
+         \app{\lem[wit={ceteri}]{caryāyogaḥ}
+          \rdg[wit={U1}]{tvaryāyogaḥ}} 3\dd{}
+        haṭhayogaḥ 4\dd{}
+        karmayogaḥ 5\dd{}
+        \app{\lem[wit={ceteri}]{layayogaḥ}
+          \rdg[wit={U2}]{nayayogaḥ}} 6\dd{}
+        dhyānayogaḥ 7\dd{}
+        mantrayogaḥ 8\dd{}
+        \app{\lem[wit={ceteri}]{lakṣyayogaḥ}
+          \rdg[wit={U1}]{lakṣayogaḥ}} 9\dd{}
+        vāsanāyogaḥ 10\dd{}
+        śivayogaḥ 11\dd{} 
+        brahmayogaḥ 12\dd{}
+        advaitayogaḥ 13\dd{} 
+        \app{\lem[wit={P,U2}]{siddhayogaḥ}
+          \rdg[wit={X}]{rājayogaḥ}} 14\dd{}
+        \app{\lem[wit={P,U2}]{rājayogaḥ}
+          \rdg[wit={ceteri}]{siddhayogaḥ}} 15\dd{}     
+        \app{\lem[wit={D,N1,P,U1}]{ete pañcadaśayogāḥ}
+          \rdg[wit={U2}]{evaṃ paṃcadaśāyogā bhavaṃti}}\dd{}\linelabel{_1e}
+      \end{prose}
+ \ekddiv{
+ head={[\uproman{2}. \textbf{kriyāyogasya lakṣaṇam}]},
+type=section,
+ depth=2,
+ n=II
+}
+\label{kriyayoga}
+%--------------------------        
+% \om                                      \E
+% \om                                      \L
+% \om                                      \B
+% idānīṃ kriyāyogasya lakṣaṇaṃ kathyate/   \P
+% idānīṃ kriyāyogasya lakṣaṇaṃ kathyate/   \N1
+% idānī  kriyāyogasya lakṣaṇaṃ kathyate//  \N2
+% idānīṃ kriyāyogasya lakṣaṇaṃ kathayate/  \D
+% \om                                      \D2
+% idānīṃ kriyāyogasya lakṣaṇaṃ kathyate/   \U1
+% atha   kriyāyogas   lakṣaṇaṃ          // \U2
+%--------------------------
+%Now the characteristic of the Yoga of [mental] action (\textit{kriyāyoga}) described.
+%--------------------------
+\begin{prose}
+        \app{\lem[wit={ceteri}]{idānīṃ}
+            \rdg[wit={N2}]{idānī}
+            \rdg[wit={U2}]{atha}}
+          \app{\lem[wit={ceteri}]{kriyāyogasya}
+            \rdg[wit={U2}]{kriyāyogas}} lakṣaṇaṃ
+          \app{\lem[wit={ceteri}]{kathyate}
+            \rdg[wit={D}]{kathayate}
+            \rdg[wit={U2}]{\om}}/
 \end{prose}
-\ekddiv{
-  head={[\uproman{40}. \textbf{śarīre navanāḍyaḥ}]},
-  type=section,
-  depth=2, 
-  n=XL
+\begin{tlg}
+  \noindent
+%--------------------------   
+% \om                                                    \E
+% \om                                                    \L
+% \om                                                    \B
+% kriyāmuktir    ayaṃ yogaḥ    svapiṇḍe siddhidāyakaḥ    \P
+% kriyāmuktir    ayaṃ yogaḥ /  svapiṇḍe siddhidāyakaḥ /  \N1
+% kriyāmukti    layaṃ yogaḥ    svapiṇḍe siddhidāyakaḥ /  \N2
+% kriyāmuktir    ayaṃ yogaḥ    svapiṇḍe siddhidāyakaḥ /  \D
+% \om                                                    \D2
+% kriyāyuktir    ayaṃ yogaḥ /  svapiṇḍe siddhidāyakaḥ /  \U1
+% kriyāmuktiḥ // ayaṃ yogaḥ    svapiṇḍe siddhidāyakaṃ // \U2 
+%--------------------------
+%This Yoga is liberation through [mental] action, it bestows success(\textit{siddhi}) in ones own body.
+%-------------------------- 
+   \tl{\note[type=source, labelb=4, labele=_4e, nosep]{ \approx  YSv (PT p. 831): kriyāmuktimayo (\textit{kriyāmuktir ayaṃ} YK 1.209) yogaḥ sapiṇḍisiddhidāyakaḥ (\textit{sapiṇḍe} YK 1.210) | yat kāromīti saṅkalpaṃ kāryārambhe manaḥ sadā ||}
+     \app{\lem[wit={ceteri}, alt={kriyāmuktir}]{kriyāmukti\skp{r-a}}
+    \rdg[wit={N2}]{kriyāmukti}
+    \rdg[wit={U2}]{kriyāmuktiḥ ||}
+}\app{\lem[wit={ceteri}, alt={ayaṃ}]{\skm{r-a}yaṃ}
+  \rdg[wit={N2}]{layaṃ}}
+\app{\lem[wit={ceteri}]{yogaḥ}
+  \rdg[wit={N1,U1}]{yogaḥ |}} svapiṇḍe
+\app{\lem[wit={ceteri}]{siddhidāyakaḥ}
+  \rdg[wit={U2}]{siddhidāyakaṃ}}/}\\
+%-------------------------
+% \om                                                    \E
+% \om                                                    \L
+% \om                                                    \B
+% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā         \P
+% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/        \N1
+% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā//1//    \N2
+% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/        \D
+% \om                                                    \D2
+% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/ 1      \U1
+% yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/        \U2
+%--------------------------
+%Each wave the mind creates at the beginning of an action,
+%-------------------------- 
+\tl{yaṃ yaṃ karoti kallolaṃ kāryāraṃbhe manaḥ sadā/}\\\linelabel{_4e}
+%--------------------------
+% \om                                                        \E
+% \om                                                        \L
+% \om                                                        \B
+% tattataḥ   kuñcanaṃ kurvan kriyāyogas tato bhavet            \P
+% tattataḥ   kuñcanaṃ kurvan kriyāyogas ato bhava     //       \N1
+% tattataḥ   kūrcanaṃ kurvan kriyāyogas ato bhava     //       \N2
+% tattataḥ   kuñcanaṃ kurvan kriyāyogas ato bhava     //       \D
+% \om                                                          \D2
+% taṃkṛ taṃ  kuñcanaṃ kurvan kriyāyogas ato ?va      //1//    \U1
+% tatastataḥ kuṃcanaṃ kurvan kriyāyogas tato bhavet //1//     \U2
+%--------------------------
+%of all those one shall withdraw oneself. Then \textit{kriyāyoga} arises.
+%--------------------------
+\tl{\note[type=source, labelb=4x, nosep]{ \approx  YSv (PT p. 839): tatsāṅgācaraṇaṃ kurvan kriyāyogarato bhavet |}
+  \app{\lem[wit={ceteri}]{tattataḥ}
+    \rdg[wit={U2}]{tatas tataḥ}
+    \rdg[wit={U1}]{taṃkṛ taṃ}}
+  \app{\lem[wit={ceteri}]{kuñcanaṃ}
+    \rdg[wit={N2}]{kūrcanaṃ}}
+  kurvan-kriyāyoga\skp{s-ta}\app{\lem[wit={P,U2}, alt={tato bhavet}]{\skm{s-t}ato bhavet}
+    \rdg[wit={D,N1,N2}]{ato bhava}
+    \rdg[wit={U1}]{ato va}}\dd{} \begin{otherlanguage}{english}\uproman{2}.1\end{otherlanguage}\hskip-2pt\dd{}}\linelabel{_4e}
+\end{tlg}%\vspace*{\fill}
+\end{edition}
+\begin{translation}
+  \ekddiv{type=trans}
+   \ekddiv{
+ head={[\uproman{1}. \textbf{Nature of Rājayoga}]},
+type=section,
+ depth=2,
+ n=I.1
 }
-\label{ninerivers}
-    \begin{prose}
-      \noindent
-%----------------------------
-%idānīṃ śarīramadhye navanāḍyas tiṣṭhanti   tanmadhye navanadīnāṃ     sthānāni   varttante/   \E
-%idānīṃ śarīre       navanaḍyas tiṣṭhaṃti   tanmadhye navāṃnā nadīnāṃ sthānāni   vartaṃte     \P
-%idānīṃ śarīre       navanaḍyas tiṣṭhanti// tanmadhye navānāṃ nadīnāṃ sthānāni   vartate/     \B
-%idānīṃ śarīre       navanaḍyaḥ tiṣṭhaṃti/  tanmadhye navānāṃ nadīnāṃ sthānāni   vartaṃte/    \L
-%\om                                                                 \N1
-%idānīṃ śarīre       ṇavānāḍyas tiṣṭhati//  tanmadhye navānāṃ nadīnāṃ sthānāni   vartraṃte//  \D
-%\om                                                                 \N2
-%idānīṃ śarīre       ṇavānaḍyaḥ stiṣṭhaṃti  tanmadhye navānāṃ nadīnāṃ sthānāni   vartaṃte    \U1
-%idānīṃ śarīramadhye navanāḍyas tiṣṭhati//  tanmadhye navānāṃ nadīnāṃ          nivarttaṃte// \U2
-%-----------------------------
-%Now, within the body there are nine rivers. Within it the courses of the nine rivers exist. 
-%----------------------------
-      \note[type=source, labelb=284, labele=_284e, nosep]{cf. YSv (PT p. 843): śarīre navanāḍīsthā narmadā ca maheśvari | iḍāyāṃ yamunā devi piṅgalāyāṃ sarasvatī | suṣumnāyāṃ vahed gaṅgā cānyonyāsu ca nāḍiṣu | gaṅgā sarasvatī godā narmadā yamunā tathā | kāverī candrabhāgā ca vitastā ca iḍāvatī | dvisaptatisahasreṣu nadīnadaparisravaḥ |}
-      \note[type=source, labelb=283, labele=_284e, nosep]{cf. SSP 3.11-12 (Ed. p. 57): pīnasā yamunā gaṅgā candrabhāgā sarasvatī | vipāsā śatarudrā ca śrīrātriś caiva narmadā | evaṃ navanadyo navanāḍīṣu vasanti | anyā upanadyaḥ kulyopakulyā dvisaptatisahasranāḍīsu vasanti |}
-idānīṃ
-\app{\lem[wit={ceteri}]{śarīre}
-  \rdg[wit={E,U2}]{śarīramadhye}}
-\app{\lem[wit={E,U2},alt={navanāḍyas}]{navanāḍya\skp{s-ti}}
-  \rdg[wit={B,L,P}]{navanaḍyas}
-  \rdg[wit={D}]{ṇavānāḍyas}
-  \rdg[wit={U1}]{ṇavānaḍyaḥs}}
-\app{\lem[wit={ceteri}]{tiṣṭhanti}
-  \rdg[wit={D,U2}]{tiṣṭhati}}/
-tanmadhye
-\app{\lem[wit={ceteri}]{navānāṃ nadīnāṃ}
-  \rdg[wit={E}]{navanadīnāṃ}}
-sthānāni
-\app{\lem[wit={ceteri}]{vartante}
-  \rdg[wit={U2}]{nivartaṃte}
-  \rdg[wit={B}]{vartate}}/
-%----------------------------     
-%gaṃgāyamune vitastā candrabhāgā sarasvatī vipāśā   śatahradā   irāvatī narmadā/   \E [p.52]
-%gaṃgāyamunā vitastā caṃdrabhāgā sarasvatī vipāśā   śātahṛdā    irāvati narmmadā    \P
-%gaṃgāyamunā vitastā caṃdrabhāgā sarasvatī vipāśā   śāśatahṛdā  irāvati narmadā/  \B
-%gaṃgāyamunā vitastā caṃdrabhāgā sarasvati vipāśā   śatat hṛda  irāvati narmadā// \L
-%\om                                                                 \N1
-%gaṃgāyamunā vitastā caṃdrabhāgā sarasvatī/ vaipaśā śata hṛdā// irāvatī/ narmadā/ \D
-%\om                                                                 \N2
-%gaṃgāyamunā vitastā caṃdrabhāgā sarasvatī vaipaśā  śata hṛdā   airāvati narmadā \U1
-%gaṃgāyamunā vitastā candrabhāgā sarasvatī vipāśā   śātadrumā//          narmadā   \U2
-%-----------------------------
-%Gaṅga, Yamuna, Vitastā, Candrabhāga, Sarasvatī, Vipāśā, Śatarudrā, Irāvati und Narmadā.  
-%-----------------------------
-gaṃgāyamunā vitastā caṃdrabhāgā
-\app{\lem[wit={ceteri}]{sarasvatī}
-  \rdg[wit={L}]{sarasvati}}
-\app{\lem[wit={ceteri}]{vipāśā}
-  \rdg[wit={D,U1}]{vaipaśā}}
-\app{\lem[type=emendation, resp=egoscr]{śatarudrā}
-  \rdg[wit={D,P,U1}]{śātahṛdā}
-  \rdg[wit={E}]{śatahradā}
-  \rdg[wit={B}]{śāśatahṛdā}
-  \rdg[wit={U2}]{śātadrumā}}
-\note[type=philcomm, labelb=285, lem={śatarudrā}]{I emended according to YSv (PT).}
-\app{\lem[wit={D,E}]{irāvatī}
-  \rdg[wit={B,L,P,U1}]{irāvati}
-  \rdg[wit={U2}]{\om}}
-narmadā/ 
-%-----------------------------
-%aparā    nadyo    nadāni       srotāṃsi   taṭākāni  vāpīkūpā---disaptati----sahasranāḍī----madhye tiṣṭhanti/  \E
-%aparā    nadyo    nadānir jārā srotāṃsī   taṭānī    vāpīkūpā---dvisaptatī---sahasranāḍīnāṃ madhye tiṣṭaṃti    \P %7660.jpg
-%aparā    nadyo    nadānir jñārāsty etāṃsī taṭānī    vāpīkūpā---dvisaptatī---sahasranāḍīnā--madhye tiṣṭaṃti/   \B
-%aparā    nadyo    nadānir jñārāsty etāṃsi taṭāni    vāpīkūpā---dvisaptati---sahasranāḍīnāṃ madhye tiṣṭaṃti/   \L
-%\om                                                                                                   \N1
-%aparā    nadyopanadīnair   bhurasrota-----taṭāka----vāpikupāḥ  dvisaptati---sahasranāḍīnāṃ madhye tiṣṭaṃti/  \D
-%\om                                                                                                   \N2
-%gaṃḍakī  nadyūpanadīnair  bhurasrota------taḍaga    vāpīkūpa---dvisaptati---sahastranāḍī   madhye  tiṣṭhaṃṭī  \U1  %em zu upanadinirjhara!!! Wasserfälle! 
-%aparā    nadyo   nadānir  jñārāsrotāsī    taṭhānī   vāpīkūpā---dvisaptati---sahasranāḍīnāṃ madhye tiṣṭaṃti//  \U2
-%-----------------------------
-%Other rivers, and waterfalls near the rivers, currents, lakes, ponds and wells are situated within the 72000 channels.
-%-----------------------------
-\app{\lem[wit={ceteri}]{aparā}
-  \rdg[wit={U1}]{gaṃḍakī}}
-\app{\lem[type=emendation, resp=egoscr]{nadyopanadinirjharāḥ srotāṃsi}
-    \rdg[wit={D}]{nadyopanadīnairbhurasrota°}
-    \rdg[wit={U1}]{nadyūpanadīnairbhurasrota°}
-    \rdg[wit={P}]{nadyo nadānirjārā srotāṃsī}
-    \rdg[wit={B,L}]{nadyo nadānirjñārāsty etāṃsī}
-    \rdg[wit={U2}]{nadyo nadānirjñārāsrotāsī}
-    \rdg[wit={E}]{nadyo nadāni srotāṃsi}}
-\app{\lem[wit={E}]{taṭākāni}
-    \rdg[wit={D}]{taṭāka}
-    \rdg[wit={B,L,P}]{taṭānī}
-    \rdg[wit={U1}]{taḍaga}
-    \rdg[wit={U2}]{taṭhānī}}
-\app{\lem[wit={ceteri}]{vāpīkūpā}
-  \rdg[wit={D}]{vāpikupāḥ}}
-\app{\lem[wit={ceteri},alt={dvisaptati°}]{dvisaptati}
-  \rdg[wit={B,P}]{dvisaptatī°}
-  \rdg[wit={E}]{disaptati}
-}\app{\lem[wit={ceteri}]{sahasranāḍīnāṃ}
-  \rdg[wit={B}]{sahasranāḍīnā}
-  \rdg[wit={E,U1}]{sahastranāḍī}}
-madhye \app{\lem[wit={ceteri}]{tiṣṭhanti}
-  \rdg[wit={U1}]{tiṣṭhaṃṭī}}/\linelabel{_284e}
-    \end{prose}
-  \end{edition}
-  \begin{translation}
-    \ekddiv{type=trans}
-    \ekddiv{
-      head={[\uproman{39}. \textbf{Eight Major Mountains within the Body}]},
-      type=section,
-      depth=2, 
-      n=XXXIX.1
-    }
+\label{introtrans}
 \begin{tlate}
-      \noindent
-Now, the eight major mountains within the body are taught.\footnote{\citetitle{hatharatnavali} 4.38ab situates all major mountains within the bones of the spine: (\textit{vīṇādaṇḍamayo merur asthīni kulaparvatāḥ}). ``The bones of Mount Meru resembling a \textit{vīṇā} are the major mountains.''; A related idea is expressed within \citetitle{yogavasishta} 73.59cd (\textit{jambūdvīpe mahāmeruṃ kulaparvatasaṃkulam || 59 ||}). ``In the continent of Jambudvīpa, there is the great Mount Meru, filled with noble peaks.''}
-
-(1) Within the spine is Mount Meru. (2) Within the door of Bahman is Mount Kailasa. (3) Within the back is the Himālaya. (4) Within the left shoulder mount Malabar. (5) Within the right shoulder of the mountain of Mandara. (6) In the right ear, the Vindhya mountain. (7) the Maināka[-mountain] is in the left ear. (8) Within the forehead Śrīśaila. Other mountains exist in the hands, feet, and toes.
+\noindent
+Homage to Śrī Gaṇeśa. Now, the nature of Rājayoga is laid down. \\
+This is the result of Rājayoga\footnote{This statement seems unconnected to the definition of Rājayoga that follows.}: Rājayoga is that by which long-term durability of the body arises
+[and] even amongst manifold royal pleasures even amongst the manifold royal entertainments and spectacle.\footnote{The definition of Rājayoga alludes to the exceptionally wealthy lifestyle of Rāmacandra's audience.} This truly is Rājayoga. These are the varieties of this Rājayoga:\\
+\indent \textbf{1.} The Yoga of [mental] action (Kriyāyoga); \textbf{2.} the Yoga of knowledge (Jñānayoga); \textbf{3.} the Yoga of wandering (Caryāyoga);\footnote{The first three Yogas allude to the four \textit{pāda}s of the Śaiva \textit{āgama}s; namely \textit{kriyā}[\textit{pāda}], \textit{caryā}[\textit{pāda}], \textit{yoga}[\textit{padā}] and \textit{jñāna}[\textit{pāda}], see \citeauthor[2015: 77]{nishvasa2015}.} \textbf{4.} the Yoga of force (Haṭhayoga); \textbf{5.} the Yoga of deeds (Karmayoga); \textbf{6.} the Yoga of absorption (Layayoga); \textbf{7.} the Yoga of meditation (Dhyānayoga); \textbf{8.} the Yoga of Mantras (Mantrayoga); \textbf{9.} the Yoga of targets (Lakṣyayoga); \textbf{10.} Yoga of mental residues (Vāsanāyoga); \textbf{11.} the Yoga of Śiva (Śivayoga); \textbf{12.} the Yoga of Brahman (Brahmayoga); \textbf{13.} the Yoga of non-duality (Advaitayoga); \textbf{14.} the Yoga of the Siddhas (Siddhayoga); \textbf{15.} the Yoga of kings (Rājayoga). These are the fifteen Yogas.\footnote{The initial codification of fifteen \textit{yoga}s appears in \getsiglum{N1}, \getsiglum{N2}, \getsiglum{P}, \getsiglum{D}, \getsiglum{U1} and \getsiglum{U2}. It is ommitted in \getsiglum{E}, \getsiglum{L} and \getsiglum{B}. It is also absent in the \textit{Yogasaṃgraha}. However, it certainly os original since it crosses the two main branches of the stemma. The definitive source of the list of the fifteen Yogas presented at the beginning of the text is uncertain. Rāmacandra's text is largely based on the content and structure of the \textit{Yogasvarodaya} (YSv) as quoted in \citetitle{ramatosana} (Ed. pp. 831-858). In this text, however, the list is incomplete. YSv mentions the total amount of fifteen Yogas but names only eight subcategories of Rājayoga. Because of that, Rāmacandra might have seen the necessity to complete it. The other source he used for compiling his text is \citetitle{ssplonavla} (SSP) which, however, does not present such a list. A more detailed investigation of the fifteen Yogas can be found at p. \pageref{yogas_list}.}
 \end{tlate}
 \ekddiv{
-  head={[\uproman{40}. \textbf{Nine Rivers within the Body}]},
-  type=section,
-  depth=2, 
-  n=XL.1
+ head={[\uproman{2}. \textbf{Characteristics of Kriyāyoga}]},
+type=section,
+ depth=2,
+ n=II.1
 }
 \begin{tlate}
-  Now, within the body, nine rivers are situated. Within it, the courses of the nine rivers exist. Gaṅga, Yamuna, Vitastā, Candrabhāga, Sarasvatī, Vipāśā, Śatarudrā, Irāvati und Narmadā. Other rivers and waterfalls near the rivers, currents, lakes, ponds and wells are within the 72000 channels.
+  \indent Now, the characteristic of Kriyāyoga, the Yoga of [mental] action, is described. \paragraph{\uproman{2}.1} This Yoga is liberation through [mental] action. It bestows success(\textit{siddhi}) in one's own body. Each wave the mind creates at the beginning of an action, of all those, one shall withdraw oneself. Then Kriyāyoga arises.\footnote{All four verses on Kriyāyoga were taken from the \textit{Yogsavarodaya} (YSv) as quotations in the \textit{Prāṇatoṣinī} (PT) and \textit{Yogakarṇikā} (YK). No sources for the following prose section can be identified.}
   \flushpage
-\end{tlate}
+    \end{tlate}
   \end{translation}
 \end{alignment}
-\pagebreak % after pp. 93-94
-
+\pagebreak %after pp. 1-2
 \chapter{Appendix}
 \section{Figures}
 
@@ -442,5 +446,3 @@ Now, the eight major mountains within the body are taught.\footnote{\citetitle{h
 \printbibliography[heading=subbibintoc, title=Online Sources, keyword=onlinesource]
 
 \end{document}
-
-
