--- a/voredition.tex
+++ b/voredition.tex
@@ -265,6 +265,20 @@ yoga in a non-ascetic and courtly environment.}
 
 Powell 2024:146
 
+\chapter{Content and Implications}
+
+\section{Rāmacandra's Avadhūtapuruṣa}
+\label{avadhutapurusa} 
+
+Rāmacandra's passage on the Avadhūta is based exclusively on the template of SSP 6.1 - 116, selecting and modifying mainly those verses that correspond to his specific definition of Rājayoga (cf. \pageref{intro}), his Rājayoga, which is primarily characterised by a life of material prosperity. Rāmacandra's concept of an Avadhūta shows no traces of the original ascetic conception, the antinomian traits, or sometimes terrible practices of an Avadhūta. As \citeauthor{pudi2023} shows in her 2023 article \citetitle{pudi2023}, the image of the Avadhūta changes significantly from the advanced and already liberated antinomian ascetic of the early medieval Vidyāpīṭha and some early medieval Purāṇas in the following centuries. Already in the medieval Saṃnyāsa Upaniṣads of the early second millennium CE. the Avadhūta is integrated into the Brahmanical \textit{āśrama} system, its unconventional traits and unorthodox practice is tamed, and the Avadhūta is thereby elevated, according to \citeauthor{pudi2023}, to a legitimate and even the highest class of \textit{saṃnyāsa āśrama}. In \citeauthor{pudi2023}s words, to a sanitised \textit{saṃnyāsin}.
+
+In the 18th century CE, the Avadhūta conception of the SSP moved further away from the antinomian-ascetic concept of the early Middle Ages. Apart from a single verse, namely SSP 6.20, in which the author points out that the Avadhūta sometimes immerses himself in worldly pleasures, or behaves devilishly like a naked and world-denying hermit, sometimes acts like a king, or he behaves according to the social norm, there is not a single remnant of the concept of an antinomian ascetic. On the contrary, all yogic practices originating in ascetic milieus, such as the practice of \textit{tapas}, surprisingly the oath of continuous nakedness (\textit{digambaras}) (SSP 6. 78), the practice of \textit{kumbhaka} or \textit{oṃ} recitation (SSP 6.79), \textit{bindu}-oriented practices (SSP 6.83), \textit{khecarīmudrā} (SSP 6.84) and other \textit{mudrā}s (SSP 6.86-97) are rejected and characterised as not practical.
+
+All those who adhere to these practices and wear a begging bowl cannot attain liberation. The avadhūta of the SSP is no longer an ascetic but nothing other than the supreme and ultimately liberated yogi \textit{par excellance}located beyond the \textit{āśrama}s (SSP 6.22). The detachment of the term from its ascetic origins observed here is particularly evident in SSP 6.4. He is "The yogi who has burnt his desires and smeared his body with their ashes and who is absorbed in the true nature of the Self is called Avadhūta". (\textit{nijasmaravibhūtir yo yogī svāṅge vibhūṣitaḥ | ādhāre yasya vā rūḍhiḥ so 'vadhūto 'bhidhīyate || 4 ||}). 
+ 
+Rāmacandra adopts this ideal, which the SSP has further developed, and pushes the development even further. Rāmacandra makes the already purified Avadhūta presentable at the royal court by symbolically wrapping it in royal robes. In this garb, Rāmacandra's Avadhūta, the sublime and liberated person who is above all things, becomes fit for courtly-royal life, as does the Rājayoga, which also arose in an ascetic-tantric context (see \citeauthor[2019]{birch2019saiva}) and is now tailored to the specific circumstances of life in the royal court. 
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: t
